...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proxima_nova_bold"
            android:text="Welcome to tender!"
            android:textColor="@color/just_white"
            android:textSize="20dp"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <android.widget.Button
            android:id="@+id/button_register"
...
            android:backgroundTint="?attr/btnColor"
            android:fontFamily="@font/proxima_nova_regular"
            android:paddingVertical="15dp"
            android:text="@string/create_account"
            android:textColor="@color/tender_black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <android.widget.Button
            android:id="@+id/button_login"
...
